# blacklist

./: .gitignore  Cargo.toml  README.md  blacklist-ext.json
blacklist-lib/: Cargo.toml
blacklist-lib/src/: lib.rs
blacklist-scraper/: Cargo.toml
blacklist-scraper/src/: main.rs  syntaxes.rs
discord-bot/: Cargo.toml
discord-bot/src/: main.rs
